Greate Plains David 3/scc-3384-retrieval/force-app/main/default/objects/Case/fields/Contact_Preference__c.field-meta.xml
<CustomField>
    <fullName>Contact_Preference__c</fullName>
    <description>SCC-3386: How the subscriber prefers to be contacted about this Trouble Ticket. Surfaced to the field technician so contact is attempted the way the customer expects.</description>
    <inlineHelpText>SCC-3386: Select how the subscriber wants to be contacted about this ticket.</inlineHelpText>
    <label>Contact Preference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Call Before Arrival</fullName>
            </value>
            <value>
                <fullName>Text Before Arrival</fullName>
            </value>
            <value>
                <fullName>Home Phone</fullName>
            </value>
            <value>
                <fullName>Mobile Phone</fullName>
            </value>
            <value>
                <fullName>Work Phone</fullName>
            </value>
            <value>
                <fullName>Text Message</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>No Contact - Proceed to Site</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>