Greate Plains David 3/scc-3384-retrieval/force-app/main/default/objects/Case/fields/Customer_Comment_Notification_Channel__c.field-meta.xml
<CustomField>
    <fullName>Customer_Comment_Notification_Channel__c</fullName>
    <description>SCC-3656: Outcome of the notification attempt for the most recent customer-facing (Public) Case Comment. Set automatically by the SCC-3656 flow from the contact&apos;s Communication Preference and email opt-out, so agents can tell whether the customer was actually reached.</description>
    <inlineHelpText>SCC-3656: How the customer was notified about the last Public comment, or why they were not notified.</inlineHelpText>
    <label>Customer Comment Notification Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Email (Text Preference Fallback)</fullName>
            </value>
            <value>
                <fullName>Not Sent - No Contact</fullName>
            </value>
            <value>
                <fullName>Not Sent - No Email Address</fullName>
            </value>
            <value>
                <fullName>Not Sent - Email Opt Out</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>