Greate Plains David 3/scc-3384-retrieval/force-app/main/default/objects/Case/fields/Equipment_Information__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Information__c</fullName>
    <description>SCC-3386: Customer premises equipment details relevant to the reported problem, such as ONT, modem or set-top box model, serial number and MAC address.</description>
    <inlineHelpText>SCC-3386: Capture the equipment involved in the reported problem, including model, serial number and MAC address where known.</inlineHelpText>
    <label>Equipment Information</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>