Greate Plains David 3/scc-3384-retrieval/force-app/main/default/objects/Case/fields/Last_Customer_Comment__c.field-meta.xml
<CustomField>
    <fullName>Last_Customer_Comment__c</fullName>
    <description>SCC-3656: Body of the most recent customer-facing (Public) Case Comment. Set automatically by the SCC-3656 flow and merged into the customer notification email. The full chronological history stays on the Case Comments related list.</description>
    <inlineHelpText>SCC-3656: Most recent comment shared with the customer. Do not edit directly - post a Public Case Comment instead.</inlineHelpText>
    <label>Last Customer Comment</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>