Greate Plains David 3/scc-3384-retrieval/force-app/main/default/objects/Case/fields/Last_Customer_Comment_By__c.field-meta.xml
<CustomField>
    <fullName>Last_Customer_Comment_By__c</fullName>
    <description>SCC-3656: Name of the rep who posted the most recent customer-facing (Public) Case Comment. Set automatically by the SCC-3656 flow and merged into the customer notification email.</description>
    <inlineHelpText>SCC-3656: Rep who posted the most recent comment shared with the customer.</inlineHelpText>
    <label>Last Customer Comment By</label>
    <length>121</length>
    <type>Text</type>
</CustomField>