Greate Plains David 3/scc-3384-retrieval/force-app/main/default/objects/Case/fields/Last_Customer_Comment_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Customer_Comment_Date__c</fullName>
    <description>SCC-3656: Date/time the most recent customer-facing (Public) Case Comment was posted. Set automatically by the SCC-3656 flow so agents can see at a glance when the customer was last updated.</description>
    <inlineHelpText>SCC-3656: When the customer was last updated by a Public Case Comment.</inlineHelpText>
    <label>Last Customer Comment Date</label>
    <type>DateTime</type>
</CustomField>