Greate Plains David 3/scc-3384-retrieval/force-app/main/default/objects/Case/fields/MTTR__c.field-meta.xml
<CustomField>
    <fullName>MTTR__c</fullName>
    <formula>IF(
    OR(
        AND(
            Has_Work_Order__c,
            ISBLANK(Work_Order_Completion_Date__c)
        ),
        AND(
            NOT(Has_Work_Order__c),
            ISBLANK(ClosedDate)
        )
    ),
    &quot;&quot;,
    TEXT(FLOOR(MTTR_Minutes__c / 60))
    &amp;
    &quot; Hours &quot;
    &amp;
    TEXT(ROUND(MOD(MTTR_Minutes__c, 60), 0))
    &amp;
    &quot; Minutes&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MTTR</label>
    <type>Text</type>
</CustomField>