Greate Plains David 3/scc-3384-retrieval/force-app/main/default/objects/Case/fields/MTTR_Minutes__c.field-meta.xml
<CustomField>
    <fullName>MTTR_Minutes__c</fullName>
    <formula>IF(
    Has_Work_Order__c,

    IF(
        ISBLANK(Work_Order_Completion_Date__c),
        NULL,

        (
            Work_Order_Completion_Date__c
            -
            CreatedDate
        ) * 1440

        -

        IF(
            ISBLANK(Pending_Customer_Start__c),
            0,

            (
                IF(
                    OR(
                        ISBLANK(Pending_Customer_End__c),
                        Pending_Customer_End__c &gt;
                        Work_Order_Completion_Date__c
                    ),
                    Work_Order_Completion_Date__c,
                    Pending_Customer_End__c
                )
                -
                Pending_Customer_Start__c
            ) * 1440
        )
    ),

    IF(
        ISBLANK(ClosedDate),
        NULL,

        (
            ClosedDate
            -
            CreatedDate
        ) * 1440

        -

        IF(
            ISBLANK(Pending_Customer_Start__c),
            0,

            (
                IF(
                    OR(
                        ISBLANK(Pending_Customer_End__c),
                        Pending_Customer_End__c &gt; ClosedDate
                    ),
                    ClosedDate,
                    Pending_Customer_End__c
                )
                -
                Pending_Customer_Start__c
            ) * 1440
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MTTR Minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>