Greate Plains David 3/scc-3384-retrieval/force-app/main/default/objects/Case/fields/Pending_Customer_End__c.field-meta.xml
<CustomField>
    <fullName>Pending_Customer_End__c</fullName>
    <label>Pending Customer End</label>
    <type>DateTime</type>
</CustomField>