Greate Plains David 3/scc-3384-retrieval/force-app/main/default/objects/Case/fields/Premise__c.field-meta.xml
<CustomField>
    <fullName>Premise__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Serviceability Request</label>
    <referenceTo>Serviceability_Request__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>