Greate Plains David 3/scc-3384-retrieval/force-app/main/default/objects/Case/fields/Problem_Occurred_Date__c.field-meta.xml
<CustomField>
    <fullName>Problem_Occurred_Date__c</fullName>
    <label>Problem Occurred Date</label>
    <type>Date</type>
</CustomField>