Greate Plains David 3/scc-3384-retrieval/force-app/main/default/objects/Case/fields/Requesting_User__c.field-meta.xml
<CustomField>
    <fullName>Requesting_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requesting User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases2</relationshipName>
    <type>Lookup</type>
</CustomField>