Greate Plains David 3/scc-3384-retrieval/force-app/main/default/objects/Case/fields/Resolution_Notes__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Notes__c</fullName>
    <description>Captures the final resolution or solution provided for the support request.</description>
    <inlineHelpText>Describe how the request was resolved. This may be shared with the requester when the case is closed and also serves as a documented record for reporting, knowledge sharing, and future reference.</inlineHelpText>
    <label>Resolution Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>