Greate Plains David 3/scc-3384-retrieval/force-app/main/default/objects/Case/fields/Secondary_Resolution__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Resolution__c</fullName>
    <label>Secondary Resolution</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Case_Resolution</valueSetName>
    </valueSet>
</CustomField>