Greate Plains David 3/scc-3384-retrieval/force-app/main/default/objects/Case/fields/Service_Address__c.field-meta.xml
<CustomField>
    <fullName>Service_Address__c</fullName>
    <label>Service Address</label>
    <type>Address</type>
</CustomField>