Greate Plains David 3/scc-3384-retrieval/force-app/main/default/objects/Case/fields/Serviceability_Request__c.field-meta.xml
<CustomField>
    <fullName>Serviceability_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Serviceability Request</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Cases (Serviceability Request)</relationshipLabel>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>