Greate Plains David 3/scc-3384-retrieval/force-app/main/default/objects/Case/fields/Source_Object__c.field-meta.xml
<CustomField>
    <fullName>Source_Object__c</fullName>
    <description>Salesforce object where the request originated (Opportunity, Work Order, Service Appointment, Account, etc.).</description>
    <label>Source Object</label>
    <length>80</length>
    <type>Text</type>
</CustomField>