Greate Plains David 3/scc-3384-retrieval/force-app/main/default/objects/Case/fields/Source_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>Source_Record_ID__c</fullName>
    <label>Source Record ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>