Greate Plains David 3/scc-3384-retrieval/force-app/main/default/objects/Case/fields/Source_Record_URL__c.field-meta.xml
<CustomField>
    <fullName>Source_Record_URL__c</fullName>
    <description>Direct link to the originating Salesforce record.</description>
    <label>Source Record URL</label>
    <type>Url</type>
</CustomField>