Greate Plains David 3/scc-3384-retrieval/force-app/main/default/objects/Case/fields/Work_Order_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Completion_Date__c</fullName>
    <label>Work Order Completion Date</label>
    <type>DateTime</type>
</CustomField>