Greate Plains David 3/scc-3384-retrieval/force-app/main/default/objects/Case/recordTypes/Salesforce_Support.recordType-meta.xml
<RecordType>
    <fullName>Salesforce_Support</fullName>
    <active>true</active>
    <businessProcess>Salesforce Support</businessProcess>
    <description>Used for Salesforce support requests raised by internal users.</description>
    <label>Salesforce Support</label>
</RecordType>