Greate Plains David 3/scc-3384-retrieval/force-app/main/default/objects/Case/recordTypes/Serviceability.recordType-meta.xml
<RecordType>
    <fullName>Serviceability</fullName>
    <active>true</active>
    <businessProcess>vlocity_cmt__Service Problem</businessProcess>
    <description>Record Type for Serviceability cases.</description>
    <label>Serviceability</label>
</RecordType>