Greate Plains David 3/scc-3384-retrieval/force-app/main/default/objects/Case/recordTypes/Trouble_Ticket.recordType-meta.xml
<RecordType>
    <fullName>Trouble_Ticket</fullName>
    <active>true</active>
    <businessProcess>vlocity_cmt__Billing</businessProcess>
    <label>Trouble Ticket</label>
</RecordType>