Greate Plains David 3/scc-3384-retrieval/force-app/main/default/objects/Case/listViews/Salesforce_Support_Case.listView-meta.xml
<ListView>
    <fullName>Salesforce_Support_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Salesforce Support</label>
    <queue>Salesforce_Support</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>